--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 #datasource
-spring.datasource.url=jdbc:h2:~/test;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:oracle:thin:@BasicKim?TNS_ADMIN=./src/main/resources/wallet
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.datasource.username=polstory
+spring.datasource.password=Pol20222022
 
 #hibernate
 spring.jpa.properties.hibernate.format_sql=true
@@ -20,6 +18,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 #securityTestAccount
-spring.security.user.name = basickim
-spring.security.user.password = basickim
-spring.security.user.roles = USER, ADMIN
+spring.security.user.name=basic
+spring.security.user.password=basic
+spring.security.user.roles=USER,ADMIN
