--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=Pol20222022
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.validator.apply_to_ddl=true
+
 
 #thymeleaf
 spring.thymeleaf.check-template-location=true
