--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 	//oracle cloud db
-	implementation 'com.oracle.ojdbc:ucp'
+	implementation 'com.oracle.ojdbc:ucp:19.3.0.0'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	implementation 'com.oracle.database.security:oraclepki'
 	implementation 'com.oracle.database.security:osdt_cert'
