--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,6 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	//test h2 db
-	runtimeOnly 'com.h2database:h2'
-
 	//jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
@@ -45,6 +42,8 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-test'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
+	//oauth client
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	//thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.4.1'
