--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,8 @@ dependencies {
 	implementation 'com.oracle.database.security:osdt_core'
 
 	//jwt
-	implementation 'com.auth0:java-jwt'
+	implementation 'com.auth0:java-jwt:4.0.0'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 }
 
